# whiskers-engine

./: .clang-format  CMakeLists.txt  Entity.h  EntityManager.cpp  EntityManager.h  PhysicsSystem.cpp  PhysicsSystem.h  README.md  Renderer.cpp  Renderer.h  glad.c  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/glad/: glad.h
